# owl

./: .env  .gitignore  .pre-commit-config.yaml  README.md  README_ja.md  README_zh.md  community_challenges.md  pyproject.toml  requirements.txt  run_app.py  run_app_zh.py
.container/: .dockerignore  (+7 more)
community_usecase/requirements-analysis-assistant/: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLEANUP_REPORT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  Makefile  README.md  cleanup_system.py  config.example.yaml  config.yaml  fix_imports.py  fix_linter.py  main.py  mkdocs.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt  run.py  run_tests.py  setup.py  test_output.json  test_output_complete.json  test_output_full.json  test_typer_command.py  verify_system.py
community_usecase/requirements-analysis-assistant/docs/: architecture.md  configuration.md  llm_service.md
community_usecase/requirements-analysis-assistant/src/: __init__.py  main.py
community_usecase/requirements-analysis-assistant/src/config/: llm_unified.yaml  llm_unified.yaml.backup  llm_unified_old.yaml  system.yaml
community_usecase/requirements-analysis-assistant/static/: app.js  index.html  style.css
community_usecase/requirements-analysis-assistant/templates/: analyzer.txt  checker.txt  documentation.json  documentation_generator.txt  generator.txt  quality_checker.txt  requirements_analysis.json  requirements_analyzer.txt  requirements_extraction.json  requirements_extractor.txt  requirements_validation.json
community_usecase/requirements-analysis-assistant/tests/: README.md  __init__.py  conftest.py  requirements.txt  test_analyzer.py  test_cli.py  test_config.py  test_document_generator.py  test_documentation.py  test_documentation_generator.py  test_exceptions_new.py  test_full_flow.py  test_full_workflow.py  test_integration.py  test_llm.py  test_llm_factory.py  test_llm_service.py  test_modeling_tools.py  test_modes.py  test_prompt_manager.py  test_quality_checker.py  test_requirements_extractor.py  test_requirements_processor.py  test_utils.py  test_web.py  test_web_api.py
(+254 files in other folders)
